<resources>
    <string name="app_name">My Notepad</string>
    <string name="note_preview">Preview</string>
    <string name="date_time">10 Dec. 13:50</string>
    <string name="note">This is a Note</string>
    <string name="add_note">Add</string>
    <string name="one_note_deleted">1 note deleted</string>
    <string name="x_notes_deleted">%d notes deleted</string>

    <string name="notification_title">Take a Note!</string>
    <string name="notification_msg1">Hello, Wanna take a note?</string>
    <string name="notification_msg2">Note taking is an excellent skill!</string>
    <string name="notification_msg3">You should take a look at some of your notes</string>

    <string name="notification_morning_msg1">Wanna take a note of how awesome your day will be?</string>

    <string name="notification_afternoon_msg1">Wanna take a note of how awesome your day is going?</string>

    <string name="notification_evening_msg1">Wanna take a note of how awesome your day was?</string>


    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_msg">To Be Determined</string>

    <string name="delete_note">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="login">Login</string>

    <string name="blue_label">Blue</string>
    <string name="yellow_label">Yellow</string>
    <string name="red_label">Red</string>
    <string name="pink_label">Pink</string>
    <string name="black_label">Black</string>

    <string name="theme_label">Theme</string>
    <string name="password_label">Password</string>
    <string name="enter_password_label">Enter Password</string>
    <string name="reenter_password_label">Re-enter Password</string>

    <string name="blue_key">blue_key</string>
    <string name="yellow_key">yellow_key</string>
    <string name="red_key">red_key</string>
    <string name="theme_key">theme_key</string>
    <string name="password_enter_key">password_enter__key</string>
    <string name="password_reenter_key">password_reenter_key</string>
    <string name="password_key">password_key</string>

    <string name="password_hint">Password</string>
    <string name="re_enter_password_hint">Retype Password</string>
    <string name="mismatched_passwords">Passwords do not match!</string>
    <string name="incorrect_password">Password is not correct!</string>
    <string name="password_too_short">Password is too short!</string>
    <string name="blank_password">Enter a Password!</string>
    <string name="show_password">Show Password</string>

    <string name="blue_value">blue</string>
    <string name="yellow_value">yellow</string>
    <string name="red_value">red</string>
    <string name="pink_value">pink</string>
    <string name="black_value">black</string>
    <string name="password_value">password</string>
    <string name="password_enabled">Password Enabled</string>
    <string name="password_disabled">Password Disabled</string>

    <string name="yesterday_at">Yesterday at %s</string>
    <string name="hour_ago">%d hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="minute_ago">%d minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="day_ago">%d day ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="just_now">Just Now</string>


</resources>
