<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.diacious.mynotepad.PasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/password_state_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_disabled"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"/>

    <Switch
        android:id="@+id/password_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_margin="8dp" />
    </FrameLayout>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:textColorHighlight="@color/colorBlackLight"
        android:hint="@string/password_hint"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/password_reenter_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textPassword"
        android:textColorHighlight="@color/colorBlackLight"
        android:hint="@string/re_enter_password_hint"
        android:visibility="invisible"/>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <Button
        android:id="@+id/save_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="8dp"
        android:text="@string/save"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center|left"
        android:text="@string/show_password"
        android:textSize="18sp"
        android:checked="false"
        android:visibility="invisible"
        />
  </FrameLayout>

</LinearLayout>
